# zkRevoke

./: .gitignore  LICENSE  README.md  config.json  contractAddress.json  gnark.pprof  go.mod  go.sum  install.sh  main.go  mise.toml  run.sh  run_test.sh  test_config.json
benchmark/: CircuitConstraints.go  ListCommitment.go  Revocation.go  benchmark.go  issuance.go  presentation.go  refresh.go  setup.go  verification.go
blockchain-hardhat/: deploy_contract.go  hardhat.config.js  instructions.txt  package-lock.json  package.json
config/: Run.go  benchmark.go  config.go  params.go
crypto2/: bbs.go  eddsa.go  test.go
engine/: complex_scenario.go  simple.go
holder/: holder.go  proofs.go  service.go  test.go
irma/: benchmark.go  credential.go  issuer.go  keys.go  revocation.go  test.go
issuer/: blockchain.go  contract.go  issuer.go  service.go  test.go
logger/: logger.go
model/: credential.go  presentation.go  sample_credential.go  sample_presentation.go  test.go
plots/: circuit.py  circuit_constraints.py  instructions  list_commitment.py  main.py  one_time_sharing.py  pyproject.toml  results.py  revocation.py  token_storage_cost.py  zkp.py
results/: result_final.go  result_holder.go  result_issuer.go  result_verifier.go  token_storage_cost_result_v1.json
test/: credential_test.go
utils/: PKI.go  byte_conversion.go  gasData.csv  monthly_average_gas_price.go  random_holders_generation.go  shortString.go  token.go  vc_validity_blocks.go
verifier/: blockchain.go  proofs.go  service.go  verifier.go
zkp/: circuitV3.go  circuitV4.go  circuit_empty.go  (+10 more)
(+6 files in other folders)
